<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">

    <string name="app_name">Dierenplaatjes</string>
    <string name="custom_activity">Continuous Scan</string>
    <string name="turn_on_flashlight">Turn on Flashlight</string>
    <string name="turn_off_flashlight">Turn off Flashlight</string>
    <string name="about">About</string>
    <string name="btn_scan">Scan kaart</string>
    <string name="downloading">Downloaden van geluiden</string>
    <string name="extracting">Uitpakken van geluiden</string>
    <string name="about_text">This app is developed by Marcel.\nYou can find the latest version on github.\nDeze app is </string>
    <string name="app_logo">applogo</string>
    <string name="github_repository">GitHub Repository</string>
    <string name="affiliated">This app is not affiliated with Albert Heijn</string>
    <string name="developer">Developer: Marcel Verpaalen</string>
    <string name="version">Version: 1.0.0</string>
    <string name="sound_questions"><![CDATA[Geluiden & Vragen]]></string>
    <string name="soundonly">Alleen geluiden</string>
    <string name="question_only">Alleen Vragen</string>

</resources>
