<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="mv.dierenplaatjes.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingBottom="@dimen/activity_vertical_margin">

        <TextView
            android:id="@+id/progressText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:text="" />

        <ProgressBar
            android:id="@+id/progressBar1"
            style="?android:attr/progressBarStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />


        <Button
            android:id="@+id/btn_scan"
            android:layout_width="220dp"
            android:layout_height="220dp"
            android:background="@drawable/button_states"
            android:onClick="scanToolbar"
            android:text="@string/btn_scan"
            android:textAlignment="center" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="50dp" />

        <RadioGroup
            android:id="@+id/soundTypeRadio"
            android:layout_width="wrap_content"
            android:layout_height="match_parent">


            <RadioButton
                android:id="@+id/sound_questions"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:checked="true"
                android:minHeight="48dp"
                android:text="@string/sound_questions" />

            <RadioButton
                android:id="@+id/soundonly"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="48dp"
                android:text="@string/soundonly" />

            <RadioButton
                android:id="@+id/question_only"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="48dp"
                android:text="@string/question_only" />

        </RadioGroup>


        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="scanContinuous"
            android:text="@string/custom_activity"
            android:visibility="gone" />


        <Button
            android:id="@+id/buttonToggle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="toggleTest"
            android:text="TestButton"
            android:visibility="gone" />


        <Button
            android:id="@+id/buttonDel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="deleteMyFile"
            android:text="Delete Download"
            android:visibility="invisible" />

        <Button
            android:id="@+id/buttonLibs"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="aboutLibs"
            android:text="About Libs"
            android:visibility="gone" />


        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="showAboutDialog"
            android:text="@string/about" />
    </LinearLayout>


</ScrollView>
